--- a/bitcoin/detecting-the-provider.mdx
+++ b/bitcoin/detecting-the-provider.mdx
@@ -44,4 +44,4 @@ const getProvider = () => {
 
 When adding a Phantom button to your dApp’s wallet modal, we recommend using the name “Phantom” with an SVG/PNG icon which can be found [here](https://docs.phantom.app/resources/assets).
 
-<figure><img src="../.gitbook/assets/image (15).png" alt="" width="375"><figcaption><p>An example Phantom button in a wallet modal</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (15).png" alt="" width="375" /><figcaption><p>An example Phantom button in a wallet modal</p></figcaption></figure>
