--- a/bitcoin/establishing-a-connection.mdx
+++ b/bitcoin/establishing-a-connection.mdx
@@ -5,9 +5,9 @@
 Once an application has [detected the provider](detecting-the-provider.md), it can then request to connect to Phantom by invoking the `requestAccounts` method. This connection request will prompt the user for permission to share their Bitcoin addresses, indicating that they are willing to interact further. Users must approve a connection request before the app can make additional requests such as [signing a message](signing-a-message.md) or [sending a transaction](../ethereum-monad-testnet-base-and-polygon/sending-a-transaction.md).\
 
 
-<figure><img src="../.gitbook/assets/image (16).png" alt="" width="375"><figcaption><p>The Phantom popup that is triggered when requestAccounts is invoked for the first time</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (16).png" alt="" width="375" /><figcaption><p>The Phantom popup that is triggered when requestAccounts is invoked for the first time</p></figcaption></figure>
 
-The `requestAccounts` method returns a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) that resolves if the user approves the connection request. Once resolved, it contains an array of the user’s `BtcAccount` objects. If the user declines the request or closes the pop-up, it will reject (throw when awaited).
+The `requestAccounts` method returns a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) that resolves if the user approves the connection request. Once resolved, it contains an array of the user's `BtcAccount` objects. If the user declines the request or closes the pop-up, it will reject (throw when awaited).
 
 The array of `BtcAccount` objects represent the possible addresses that can be used when a user connects with Phantom. This is defined as:
 
@@ -24,15 +24,13 @@ Where:
 
 `address` - The Bitcoin address owned by the user
 
-`addressType` - The address’s format (see: [https://bitcoin.design/guide/glossary/address/](https://bitcoin.design/guide/glossary/address/))
+`addressType` - The address's format (see: [https://bitcoin.design/guide/glossary/address/](https://bitcoin.design/guide/glossary/address/))
 
 `publicKey` - A hex string representing the bytes of the public key of the account
 
 `purpose` - The general purpose of the address. If `ordinals`, the user prefers to store ordinals on this address. If `payment`, the user prefers to store bitcoin on this address
 
-{% hint style="warning" %}
-The purpose fields represent user preferences and do not represent a guarantee that there will only be bitcoin on `payment` addresses or only ordinals on `ordinals` addresses. When submitting a transaction, make sure to carefully select UTXOs such that you do not cause the user to accidentally spend a rare or inscribed satoshi.
-{% endhint %}
+> **Warning:** The purpose fields represent user preferences and do not represent a guarantee that there will only be bitcoin on `payment` addresses or only ordinals on `ordinals` addresses. When submitting a transaction, make sure to carefully select UTXOs such that you do not cause the user to accidentally spend a rare or inscribed satoshi.
 
 The following is an example of how to connect to Phantom:
 
@@ -61,9 +59,9 @@ console.log(accounts);
 
 ## Disconnecting
 
-There is no way for dApps to programmatically disconnect a user. Once a user has established a connection, Phantom will add the website they opened a connection with to a list of "Connected Apps." When a user returns to one of these whitelisted sites, Phantom will attempt to reconnect the application automatically. At any time, the user can revoke access to the dApp through their UI by navigating to “Settings” > “Connected Apps”. If a user disconnects from a dApp, they will need to reconnect on the subsequent visit before signing a message or sending a transaction.
+There is no way for dApps to programmatically disconnect a user. Once a user has established a connection, Phantom will add the website they opened a connection with to a list of "Connected Apps." When a user returns to one of these whitelisted sites, Phantom will attempt to reconnect the application automatically. At any time, the user can revoke access to the dApp through their UI by navigating to "Settings" > "Connected Apps". If a user disconnects from a dApp, they will need to reconnect on the subsequent visit before signing a message or sending a transaction.
 
-<figure><img src="../.gitbook/assets/image (17).png" alt="" width="375"><figcaption><p>Users can disconnect from dApps within their “Connected Apps” settings</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (17).png" alt="" width="375" /><figcaption><p>Users can disconnect from dApps within their "Connected Apps" settings</p></figcaption></figure>
 
 ## Changing Accounts
 
@@ -75,7 +73,7 @@ phantomProvider.on('accountsChanged', (accounts: BtcAccount[]) => {
 });
 ```
 
-If Phantom passes an empty array on `accountsChanged`, it implies that the user has switched to an account that has not connected to the dApp before (i.e. not already in “Connected Apps”) or does not support Bitcoin (e.g. a Solana private key account). In this case, the application can either do nothing or attempt to reconnect:
+If Phantom passes an empty array on `accountsChanged`, it implies that the user has switched to an account that has not connected to the dApp before (i.e. not already in "Connected Apps") or does not support Bitcoin (e.g. a Solana private key account). In this case, the application can either do nothing or attempt to reconnect:
 
 ```typescript
 phantomProvider.on('accountsChanged', (accounts: BtcAccount[]) => {
