--- a/developer-powertools/auto-confirm.mdx
+++ b/developer-powertools/auto-confirm.mdx
@@ -1,6 +1,6 @@
 # Auto-Confirm
 
-{% embed url="https://youtu.be/WAfv06CPiRo" %}
+[Watch Auto-Confirm Demo](https://youtu.be/WAfv06CPiRo)
 
 [Auto-Confirm](https://phantom.app/learn/blog/auto-confirm) is a feature that lets users submit transactions and signed messages without triggering an approval dialog. When Auto-Confirm is enabled, Phantom will still analyze requests and their accompanying domains before signing.
 
