--- a/developer-powertools/mobile-web-debugging.mdx
+++ b/developer-powertools/mobile-web-debugging.mdx
@@ -1,6 +1,6 @@
 # Mobile Web Debugging
 
-<figure><img src="../.gitbook/assets/IMG_4683 (1).jpg" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/IMG_4683 (1).jpg" alt="" /><figcaption></figcaption></figure>
 
 Developers can debug their mobile web dapps using PC browsers. To enable this in Phantom mobile go to Settings -> Developer Settings and toggle Web View Debugging on. Then follow the steps below for your platform.
 
@@ -21,4 +21,4 @@ Developers can debug their mobile web dapps using PC browsers. To enable this in
 
 See the [React Native Webview Docs](https://github.com/react-native-webview/react-native-webview/blob/master/docs/Debugging.md#debugging-webview-contents) for more info.
 
-{% embed url="https://www.loom.com/share/1b1817d84af649c9a38e5dbd8ed25ca9?t=1" %}
+[Watch Mobile Web Debugging Tutorial](https://www.loom.com/share/1b1817d84af649c9a38e5dbd8ed25ca9?t=1)
