--- a/developer-powertools/shortcuts.mdx
+++ b/developer-powertools/shortcuts.mdx
@@ -1,6 +1,6 @@
 # Shortcuts
 
-{% embed url="https://user-images.githubusercontent.com/60185486/269435891-ad5fa479-11b2-4c09-b727-74934d5d45a8.mp4" %}
+[Watch Shortcuts Demo](https://user-images.githubusercontent.com/60185486/269435891-ad5fa479-11b2-4c09-b727-74934d5d45a8.mp4)
 
 [Shortcuts](https://phantom.app/learn/blog/shortcuts) is a feature that enables NFT collections to surface a curated list of links to their holders.&#x20;
 
