--- a/developer-powertools/solana-actions-and-blinks.mdx
+++ b/developer-powertools/solana-actions-and-blinks.mdx
@@ -1,6 +1,6 @@
-# Solana Actions & Blinks
+# Solana Actions and Blinks
 
-{% embed url="https://youtu.be/TU87JjHxQQo" %}
+[Watch Solana Actions and Blinks Demo](https://youtu.be/TU87JjHxQQo)
 
 [Solana Actions](https://solana.com/docs/advanced/actions) are APIs to deliver signable transactions from a variety of web contexts. Blockchain links, or [Blinks](https://solana.com/docs/advanced/actions#blinks), are client applications that introspect Action APIs and construct user interfaces to interact with Actions.
 
