--- a/developer-powertools/solana-priority-fees.mdx
+++ b/developer-powertools/solana-priority-fees.mdx
@@ -54,10 +54,10 @@ If all of the above conditions are met, Phantom will automatically calculate and
 
 ### Further Reading
 
-{% embed url="https://docs.solana.com/proposals/fee_transaction_priority" %}
+[Fee Transaction Priority - Solana Proposals](https://docs.solana.com/proposals/fee_transaction_priority)
 
-{% embed url="https://solanacookbook.com/references/basic-transactions.html#how-to-change-compute-budget-fee-priority-for-a-transaction" %}
+[How to change compute budget fee priority for a transaction - Solana Cookbook](https://solanacookbook.com/references/basic-transactions.html#how-to-change-compute-budget-fee-priority-for-a-transaction)
 
-{% embed url="https://docs.solana.com/developing/programming-model/runtime#prioritization-fees" %}
+[Prioritization Fees - Solana Programming Model](https://docs.solana.com/developing/programming-model/runtime#prioritization-fees)
 
-{% embed url="https://docs.solana.com/transaction_fees#prioritization-fee" %}
+[Transaction Fees - Prioritization Fee](https://docs.solana.com/transaction_fees#prioritization-fee)
