--- a/developer-powertools/solana-token-extensions-token22.mdx
+++ b/developer-powertools/solana-token-extensions-token22.mdx
@@ -10,7 +10,7 @@ If a particular mint has a `memberAddress` listed under a `groupMemberPointer`, 
 
 Example: `8eDYWjDKmCR5B3UJm95gaG8zCdT5anWakTZG1PyWpBm9` ([Mainnet](https://solana.fm/address/8eDYWjDKmCR5B3UJm95gaG8zCdT5anWakTZG1PyWpBm9/extensions))
 
-<div><figure><img src="../.gitbook/assets/Screenshot 2024-03-14 at 3.10.27 PM.png" alt=""><figcaption><p>A collection configured by the Group &#x26; Group Pointer Extensions</p></figcaption></figure> <figure><img src="../.gitbook/assets/Screenshot 2024-03-14 at 3.10.37 PM (2).png" alt=""><figcaption></figcaption></figure></div>
+<div><figure><img src="../.gitbook/assets/Screenshot 2024-03-14 at 3.10.27 PM.png" alt="" /><figcaption><p>A collection configured by the Group &#x26; Group Pointer Extensions</p></figcaption></figure> <figure><img src="../.gitbook/assets/Screenshot 2024-03-14 at 3.10.37 PM (2).png" alt="" /><figcaption></figcaption></figure></div>
 
 ## Interest-Bearing Tokens
 
@@ -18,7 +18,7 @@ The [Interest-Bearing Tokens Extension](https://spl.solana.com/token-2022/extens
 
 Example: `aNMXxywEHAH3VfWnaVwedLJWPT9NsxagsGTEQqS5WKK` ([Mainnet](https://solana.fm/address/aNMXxywEHAH3VfWnaVwedLJWPT9NsxagsGTEQqS5WKK?cluster=mainnet-alpha))
 
-<figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 9.55.46 PM.png" alt="" width="370"><figcaption><p>An Interest Rate displayed in Phantom</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 9.55.46 PM.png" alt="" width="370" /><figcaption><p>An Interest Rate displayed in Phantom</p></figcaption></figure>
 
 ## Memo on Transfer
 
@@ -26,7 +26,7 @@ The [Memo on Transfer Extension](https://spl.solana.com/token-2022/extensions#re
 
 Example: BonkEarn `CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo` ([Mainnet](https://solana.fm/address/CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo?cluster=mainnet-alpha))
 
-<div><figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 6.20.17 PM.png" alt=""><figcaption><p>A memo field in Phantom</p></figcaption></figure> <figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 6.20.34 PM.png" alt=""><figcaption></figcaption></figure></div>
+<div><figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 6.20.17 PM.png" alt="" /><figcaption><p>A memo field in Phantom</p></figcaption></figure> <figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 6.20.34 PM.png" alt="" /><figcaption></figcaption></figure></div>
 
 ## Metadata Extension
 
@@ -34,7 +34,7 @@ The [Metadata Extension](https://spl.solana.com/token-2022/extensions#metadata) 
 
 Example: `EGKdqrXxFeTpRTskrH81xmefuTAU9MJGCDLoNss28a2` ([Devnet](https://solana.fm/address/EGKdqrXxFeTpRTskrH81xmefuTAU9MJGCDLoNss28a2?cluster=devnet-solana))
 
-<figure><img src="../.gitbook/assets/mintgif.gif" alt=""><figcaption><p>Metadata Extension Token Displayed in Phantom</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/mintgif.gif" alt="" /><figcaption><p>Metadata Extension Token Displayed in Phantom</p></figcaption></figure>
 
 ## Metadata Pointer Extension
 
@@ -46,7 +46,7 @@ The [Permanent Delegate Extension](https://spl.solana.com/token-2022/extensions#
 
 Example: `aNMXxywEHAH3VfWnaVwedLJWPT9NsxagsGTEQqS5WKK` ([Mainnet](https://solana.fm/address/aNMXxywEHAH3VfWnaVwedLJWPT9NsxagsGTEQqS5WKK?cluster=mainnet-alpha))
 
-<figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 9.55.56 PM.png" alt="" width="368"><figcaption><p>A Permanent Delegate warning displayed in Phantom</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2024-01-24 at 9.55.56 PM.png" alt="" width="368" /><figcaption><p>A Permanent Delegate warning displayed in Phantom</p></figcaption></figure>
 
 ## Transfer Fees
 
@@ -54,7 +54,7 @@ The [Transfer Fees Extension](https://spl.solana.com/token-2022/extensions#trans
 
 Example: BonkEarn `CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo` ([Mainnet](https://solana.fm/address/CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo?cluster=mainnet-alpha))
 
-<figure><img src="../.gitbook/assets/transferfee.png" alt="" width="364"><figcaption><p>A Transfer Fee displayed in Phantom</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/transferfee.png" alt="" width="364" /><figcaption><p>A Transfer Fee displayed in Phantom</p></figcaption></figure>
 
 ## Transfer Hooks
 
