--- a/developer-powertools/testnet-mode.mdx
+++ b/developer-powertools/testnet-mode.mdx
@@ -1,6 +1,6 @@
 # Testnet Mode
 
-<figure><img src="../.gitbook/assets/Developer Settings (1).png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/Developer Settings (1).png" alt="" /><figcaption></figcaption></figure>
 
 Developers can access test networks via Settings -> Developer Settings in Phantom. The following testnets are available:
 
