--- a/developer-powertools/token-pages.mdx
+++ b/developer-powertools/token-pages.mdx
@@ -34,15 +34,15 @@ When accessed on mobile devices with Phantom installed, token page URLs automati
 
 The web view includes a QR code that, when scanned, deep links directly to the token's swap screen within the Phantom app. This enables quick and convenient token swaps for mobile users.
 
-<figure><img src="../.gitbook/assets/Screenshot 2025-02-05 at 11.44.32 AM.png" alt=""><figcaption><p>Token Page Web View</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2025-02-05 at 11.44.32 AM.png" alt="" /><figcaption><p>Token Page Web View</p></figcaption></figure>
 
-<figure><img src="../.gitbook/assets/IMG_6005 (1).PNG" alt="" width="188"><figcaption><p>Token Page Mobile App View</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/IMG_6005 (1).PNG" alt="" width="188" /><figcaption><p>Token Page Mobile App View</p></figcaption></figure>
 
 #### Enhanced Social Sharing
 
 Each token page generates dynamic OpenGraph images that display essential token information and price charts. When shared on social media platforms, these rich previews provide immediate context about the token's performance and status.
 
-<figure><img src="../.gitbook/assets/Screenshot 2025-02-05 at 11.58.40 AM.png" alt=""><figcaption><p>Token Page Image from X.com</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2025-02-05 at 11.58.40 AM.png" alt="" /><figcaption><p>Token Page Image from X.com</p></figcaption></figure>
 
 
 
