--- a/phantom-deeplinks/other-methods/fungible.mdx
+++ b/phantom-deeplinks/other-methods/fungible.mdx
@@ -14,7 +14,7 @@ https://phantom.app/ul/v1/fungible?token=<fungible>
 
 ### Example
 
-<figure><img src="../../.gitbook/assets/fungible-example.gif" alt=""><figcaption><p>Fungible Deeplink Example</p></figcaption></figure>
+<figure><img src="../../.gitbook/assets/fungible-example.gif" alt="" /><figcaption><p>Fungible Deeplink Example</p></figcaption></figure>
 
 [FOXY](https://phantom.app/ul/v1/fungible?token=solana%3A101%2Faddress%3AFoXyMu5xwXre7zEoSvzViRk3nGawHUp9kUh97y2NDhcq)
 
