--- a/resources/sandbox.mdx
+++ b/resources/sandbox.mdx
@@ -4,7 +4,7 @@
 
 For a live example of how a multichain dApp can integrate with Phantom, check out our Multichain Sandbox on [CodeSandbox](https://472igc.csb.app/) and [GitHub](https://github.com/phantom-labs/multi-chain-sandbox).
 
-<figure><img src="../.gitbook/assets/Screen Shot 2023-03-09 at 4.55.22 PM.png" alt=""><figcaption><p>The Phantom Multichain Sandbox</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screen Shot 2023-03-09 at 4.55.22 PM.png" alt="" /><figcaption><p>The Phantom Multichain Sandbox</p></figcaption></figure>
 
 ### Solana-only Sandbox
 
