--- a/best-practices/displaying-apps-within-the-activity-tab.mdx
+++ b/best-practices/displaying-apps-within-the-activity-tab.mdx
@@ -19,9 +19,9 @@ layout:
 
 When a user views their historical activity, Phantom will parse their dApp interactions and enrich them with known metadata. The following are two examples of how Phantom displays historical transactions on [Magic Eden](https://magiceden.io/) and [Jupiter](https://jup.ag/), respectively:
 
-<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.52.40 PM.png" alt=""><figcaption><p>An example activity row for Magic Eden</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.52.40 PM.png" alt="" /><figcaption><p>An example activity row for Magic Eden</p></figcaption></figure>
 
-<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.51.57 PM (1).png" alt=""><figcaption><p>An example activity row for Jupiter</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.51.57 PM (1).png" alt="" /><figcaption><p>An example activity row for Jupiter</p></figcaption></figure>
 
 To enable this, dApp developers can send an email to [developers@phantom.app](mailto:developers@phantom.app) with the following information:
 
