--- a/developer-powertools/wallet-standard.mdx
+++ b/developer-powertools/wallet-standard.mdx
@@ -50,17 +50,17 @@ When a wallet is ready to inject into a website, it will [dispatch](https://gith
 
 Before Wallet Standard, if a dApp wanted to support 20 wallets, it had to load 5kb of code per wallet (100k total). This bloating increases linearly as the number of wallets increase. The vast majority of this code goes unused, as the user will only use one or two wallets.
 
-<figure><img src="../.gitbook/assets/image (1).png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (1).png" alt="" /><figcaption></figcaption></figure>
 
 Wallet Standard turns this inside out: If dapps want to support 100 wallets, they just to support Wallet Standard. Any wallet that supports the standard is will automatically be detected and supported. Implementations are replaced with interfaces.
 
-<figure><img src="../.gitbook/assets/image (13).png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (13).png" alt="" /><figcaption></figcaption></figure>
 
 #### Eliminates Attack Surfaces
 
 Before Wallet Standard, every new wallet had to land a PR in a library such as the Solana Wallet Adapter. Library maintainers had to vet hundreds of PRs to ensure they weren't introducing malware into the adapter. By eliminating plugins, these libraries can now eliminate attack surfaces.
 
-<figure><img src="../.gitbook/assets/image (11).png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/image (11).png" alt="" /><figcaption></figcaption></figure>
 
 #### Multichain By Default
 
@@ -74,12 +74,10 @@ Wallet Standard will always input and output transactions, pubkeys, and signatur
 
 Phantom comes with built-in support for Wallet Standard on **Solana**. To get started, simply update the [Solana Wallet Adapter](https://github.com/solana-labs/wallet-adapter) to the latest release. For a demo, check out the [Wallet Adapter Example](https://solana-labs.github.io/wallet-adapter/example/).
 
-{% hint style="danger" %}
-**BREAKING CHANGE:** If you are migrating an existing Solana dApp to use Wallet Standard, please ensure that you are not mutating transactions in place. Failure to do will result in a breaking change. For more information, please see the below threads.
-{% endhint %}
+> **Breaking Change:** If you are migrating an existing Solana dApp to use Wallet Standard, please ensure that you are not mutating transactions in place. Failure to do will result in a breaking change. For more information, please see the below threads.
 
-{% embed url="https://twitter.com/0xprof_lupin/status/1613252832525955073" %}
+[Prof Lupin Tweet about Wallet Standard](https://twitter.com/0xprof_lupin/status/1613252832525955073)
 
 ### Further Reading
 
-{% embed url="https://github.com/wallet-standard/wallet-standard/blob/master/DESIGN.md" %}
+[Wallet Standard Design Document](https://github.com/wallet-standard/wallet-standard/blob/master/DESIGN.md)
