--- a/phantom-deeplinks/provider-methods/signandsendtransaction.mdx
+++ b/phantom-deeplinks/provider-methods/signandsendtransaction.mdx
@@ -8,9 +8,9 @@ In order to send a transaction, an application must:
 2. Have the transaction be signed and submitted to the network by the user's Phantom wallet.
 3. Optionally await network confirmation using a Solana JSON RPC connection.
 
-{% hint style="info" %}
-For more information about the nature of Solana transactions, please review the [`solana-web3.js` docs](https://solana-labs.github.io/solana-web3.js/) as well as the [Solana Cookbook](https://solanacookbook.com/core-concepts/transactions.html#transactions).
-{% endhint %}
+> **Info:** The transaction must be a base58-encoded serialized transaction.
+
+> **Info:** For more information about the nature of Solana transactions, please review the [`solana-web3.js` docs](https://solana-labs.github.io/solana-web3.js/) as well as the [Solana Cookbook](https://solanacookbook.com/core-concepts/transactions.html#transactions).
 
 For a sample transaction using Phantom deeplinks, check out our [deeplinking demo app](../../resources/sandbox.md#deeplinking-demo-app).
 
