--- a/resources/assets.mdx
+++ b/resources/assets.mdx
@@ -2,8 +2,8 @@
 
 A variety of Phantom logos and assets for your integration can be found here:
 
-{% file src="../.gitbook/assets/Phantom-Integration-Assets.zip" %}
+[Download Phantom Integration Assets](../.gitbook/assets/Phantom-Integration-Assets.zip)
 
 When integrating Phantom, please refer to our attached style guide. For most dApp integrations, we recommend using the following icon in SVG or PNG format:
 
-<figure><img src="../.gitbook/assets/Phantom_SVG_Icon.svg" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/Phantom_SVG_Icon.svg" alt="" /><figcaption></figcaption></figure>
