--- a/solana/signing-a-message.mdx
+++ b/solana/signing-a-message.mdx
@@ -9,34 +9,31 @@ In order to send a message for the user to sign, a web application must:&#x20;
 
 The [`handleSignMessage` section of our developer sandbox](https://github.com/phantom-labs/sandbox/blob/b57fdd0e65ce4f01290141a01e33d17fd2f539b9/src/App.tsx#L242) provides an example of signing a message.
 
-{% hint style="info" %}
-For more information on how to verify the signature of a message, please refer to [tweetnacl-js](https://github.com/dchest/tweetnacl-js/blob/master/README.md#naclsigndetachedverifymessage-signature-publickey).
-{% endhint %}
+> **Info:** Phantom uses Ed25519 signatures for Solana message signatures. To verify a message signature, you can use the [tweetnacl](https://www.npmjs.com/package/tweetnacl) npm package.
 
-{% tabs %}
-{% tab title="signMessage()" %}
+**signMessage():**
+
 ```javascript
 const provider = getProvider(); // see "Detecting the Provider"
 const message = `To avoid digital dognappers, sign below to authenticate with CryptoCorgis`;
 const encodedMessage = new TextEncoder().encode(message);
 const signedMessage = await provider.signMessage(encodedMessage, "utf8");
 ```
-{% endtab %}
 
-{% tab title="request()" %}
-<pre class="language-javascript"><code class="lang-javascript">const provider = getProvider(); // see "Detecting the Provider"
+**request():**
+
+```javascript
+const provider = getProvider(); // see "Detecting the Provider"
 const message = `To avoid digital dognappers, sign below to authenticate with CryptoCorgis`;
 const encodedMessage = new TextEncoder().encode(message);
-<strong>const signedMessage = await provider.request({
-</strong>    method: "signMessage",
+const signedMessage = await provider.request({
+    method: "signMessage",
     params: {
          message: encodedMessage,
          display: "hex",
     },
 });
-</code></pre>
-{% endtab %}
-{% endtabs %}
+```
 
 ## Sign In With Solana (SIWS)
 
